app/ui/sidebar/styles.module.css
.sidebar {
	position: relative;
}

.content {
	position: relative;
	display: flex;
	flex-direction: column;
	justify-content: center;
	gap: var(--spacing-6);
	width: 100%;
	padding: var(--spacing-8);
	font-size: var(--spacing-5);
	font-weight: 150;
	color: var(--color-white);
	text-shadow: 0 var(--spacing-1) var(--spacing-2) var(--color-black-translucent);

	@media screen and (width >= 1300px) {
		width: min-content;
		height: 100%;
		padding: var(--spacing-9) var(--spacing-8);
		white-space: nowrap;
	}
}



.header {
	display: flex;
	flex-direction: column;
	gap: var(--spacing-2);
	letter-spacing: var(--spacing-1);
	font-variation-settings: 'wdth' 120;

	h1 {
		font-size: var(--spacing-7);
		font-weight: 800;
	}

	span {
		font-size: var(--spacing-5);
		font-weight: 800;
	}
}

.contact {
	display: flex;
	flex-direction: column;
	gap: var(--spacing-2);
}

.links {
	display: flex;
	gap: var(--spacing-5);

	a {
		display: flex;
		justify-content: center;
		width: var(--container-1);
		padding: var(--spacing-2);
		border-radius: var(--spacing-2);
		box-shadow: 0 var(--spacing-1) var(--spacing-2) var(--color-black-translucent);
		background-color: var(--color-white);
		aspect-ratio: 1 / 1;
		transition: opacity 0.1s ease-in-out;

		&:hover {
			opacity: 0.5;
		}
	}

	svg > path {
		fill: var(--color-green-mid);
	}
}

.polaroid {
	position: relative;
	display: flex;
	max-width: var(--container-5);
	margin: auto auto 0;

	div {
		position: relative;
		display: flex;
		width: 100%;
		padding: 10% 10% 25%;
		border-radius: var(--spacing-3);
		box-shadow: 0 var(--spacing-1) var(--spacing-2) var(--color-black-translucent);
		background-color: var(--color-white);
		rotate: 5deg;
		align-self: center;

		&::after {
			content: '';
			position: absolute;
			width: calc(80%);
			border-radius: var(--spacing-1);
			box-shadow: inset 0 var(--spacing-1) var(--spacing-1) var(--color-black-translucent);
			aspect-ratio: 1 /1;
		}
	}

	img {
		width: 100%;
		height: 100%;
		border-radius: var(--spacing-1);
		filter: sepia(.2);
	}
}

